corrected display bugs on mobile

--- a/styles/[slug].module.css
+++ b/styles/[slug].module.css
@@ -304,6 +304,10 @@
 
 @media (max-width: 900px) {
 
+    .albumRightContainer {
+        max-width: none;
+    }
+
     .video {
 
         padding: 30px 0;
